# pers-assist

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  settings.yaml.example
.claude/: settings.json
.claude/agents/: README.md
.claude/commands/: daily-review.md  evening-review.md  ideas-db.md  status.md  weekly-plan.md
.claude/skills/add-med-record/: SKILL.md
.claude/skills/add-med-record/scripts/: create-notion-page.sh
.claude/skills/weekly-plan/: SKILL.md
.claude/skills/weekly-plan/references/: INTERACTIVE.md  NOTION-TEMPLATE.md
config/: medications.yaml.example  settings.yaml.example
docs/: areas.md  dadali-recommendations.md  mcp-setup.md
singularity-mcp/: FIX_TODAY_TASKS.md  README.md  pyproject.toml
singularity-mcp/docs/: COMPLETED_TASKS.md  DEBUG_INSTRUCTIONS.md  task-groups.md
singularity-mcp/scripts/: setup_token.sh
singularity-mcp/src/singularity_mcp/: __init__.py  api.py  server.py
singularity-mcp/tests/: test_create_task.py  test_date_formats.py  test_fix.py  test_inbox.py  test_simple.py  test_tags.py  test_tags_simple.py  test_timezone.py  test_today.py
